SET (CMAKE_C_COMPILER             "/usr/bin/clang-14")
SET (CMAKE_C_FLAGS                "-Wall -std=c11")
SET (CMAKE_C_FLAGS_DEBUG          "-g")
SET (CMAKE_C_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
SET (CMAKE_C_FLAGS_RELEASE        "-O4 -DNDEBUG")
SET (CMAKE_C_FLAGS_RELWITHDEBINFO "-O2 -g")
 
SET (CMAKE_CXX_COMPILER             "/usr/bin/clang++-14")
SET (CMAKE_CXX_FLAGS                "-Wall -std=c++20")
SET (CMAKE_CXX_FLAGS_DEBUG          "-g")
SET (CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
SET (CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG")
SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
 
cmake_minimum_required(VERSION 3.0.0)
project(os_work VERSION 0.1.0)

include(CTest)
enable_testing()

message(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
message(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
add_executable(os_work main.cpp)
execute_process(COMMAND llvm-config --libs all
                OUTPUT_VARIABLE llvm_libraries)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
SET (CMAKE_AR      "/usr/bin/llvm-ar-14")
SET (CMAKE_LINKER  "/usr/bin/lld-14")
SET (CMAKE_NM      "/usr/bin/llvm-nm-14")
SET (CMAKE_OBJDUMP "/usr/bin/llvm-objdump-14")
SET (CMAKE_RANLIB  "/usr/bin/llvm-ranlib-14")
include(CPack)
target_link_libraries(os_work ${llvm_libs})